2012-10-23  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/libYARP_OS/include/yarp/os/Thread.h: Make
	yarp::os::Thread::join() method public.

	* conf/YarpFindDependencies.cmake: Require TinyXML 2.6 for
	TiXmlElement::QueryBoolAttribute()

2012-10-17  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Companion.cpp: add "yarp sample" command
	to sample an input at a fixed frequency.

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: add
	BufferedPort::setTargetPeriod method for explicitly
	rate-controlled input.

2012-10-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Companion.cpp: add "yarp merge" command,
	equivalent to portMerge utility in iCub repository.  Original
	code by Marco [thanks Marco Randazzo]

2012-10-11  Ugo Pattacini  <ugo.pattacini@iit.it>

   * src/libYARP_dev/include/yarp/dev/GazeControl.h,CartesianControl.h:
   added a couple of new methods for low-level tweaking

2012-10-09  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/yarpserver/src/NameServiceOnTriples.cpp: give structured
	responses to name queries when serving json.

	* src/libYARP_OS/src/HttpCarrier.cpp: convert to json format
	when format=json is appended to URL.  Support administrative
	messages when admin=true is appended to URL.

2012-10-04  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/template/YARPConfig.cmake.in: add YARP_BINDINGS variable,
	so that a CMakeLists.txt like this is sufficient to get bindings
	going -
	   cmake_minimum_required(VERSION 2.8)
	   find_package(YARP REQUIRED)
	   add_subdirectory(${YARP_BINDINGS} bindings)

	* conf/YarpBindingsSource.cmake: add yarp bindings source to
	install, for user convenience [thanks Juan G Victores]

2012-10-02  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/src/YarpImageHelper.java: add access to floating
	point rgb images for matlab, a patch from Plinio
	[thanks Plinio Moreno Lopez]

2012-09-21  Paul Fitzpatrick  <paul@robotrebuilt.com>
